--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
-  
+
 dependencies:
   flutter:
     sdk: flutter
@@ -24,6 +24,16 @@ dependencies:
   carousel_slider: ^4.2.1
   readmore: ^2.2.0
   flutter_rating_bar: ^4.0.1
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  lottie: ^2.7.0
+  connectivity_plus: ^5.0.2
+  google_sign_in: ^6.1.4
+  shimmer: ^3.0.0
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.4
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
